fixed the overlap on the modals

--- a/frontend/src/components/NewEventForm/NewEventForm.css
+++ b/frontend/src/components/NewEventForm/NewEventForm.css
@@ -36,7 +36,7 @@ input[type=text] {
 }
 
 .timeMenu {
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
 }
 
 .acorn-svg{
