--- a/frontend/src/components/UpdateModal/UpdateModal.css
+++ b/frontend/src/components/UpdateModal/UpdateModal.css
@@ -35,7 +35,10 @@ input[type=text] {
 }
 
 .timeMenu {
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .date-picker-container {
@@ -43,8 +46,10 @@ input[type=text] {
 }
 
 .date-picker {
-    position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -10px 0 0 37.5px;
+    position: relative;
+    /* align-self: center; */
+  /* top: 50%; */
+  /* left: 50%; */
+  /* margin: -10px 0 0 37.5px; */
+
 }
